// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Console em texto puro Apresenta o 'splash' 1`] = `
(no data)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
L:AC TOOLS - Extensions for VS-Code and NodeJS
L:See https://github.com/brodao/workspace/projects/AFPV
L:test_show_banner [99.99.99] Show Banner

`;

exports[`Console em texto puro Aviso com vários agumentos 1`] = `
(no data)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
L:Aviso com argumentos

`;

exports[`Console em texto puro Aviso simples 1`] = `
(no data)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
L:Aviso simples

`;

exports[`Console em texto puro Erro com vários agumentos 1`] = `
(no data)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
L:Erro com argumentos

`;

exports[`Console em texto puro Erro simples 1`] = `
(no data)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
L:Erro simples

`;
